@@ -1,3 +1,6 @@
+2007-11-16 Yusei
+* Fixed Base_showFoundText. selection_name argument is required for listbox.
+
 2007-10-11 Kazuhiko
 * move portal_contributions from Paths to Tools.
 
